[package]
name = "mbus"
version = "0.1.3"
authors = ["Piers Finlayson <piers@packom.net>"]
edition = "2018"
license = "GPL-3.0-or-later"
repository = "https://github.com/packom/mbus-httpd"
documentation = "https://github.com/packom/mbus-httpd"
homepage = "https://github.com/packom/mbus-httpd"
description = "An HTTP microservice exposing M-Bus Functionality"
readme = "README.md"
keywords = ["mbus","m-bus","openapi","meter","http"]
categories = ["api-bindings","hardware-support","network-programming","embedded","web-programming"]

[badges]
maintenance = { status = "actively-developed" }
travis-ci = { repository = "packom/mbus-httpd", branch = "master" }

[dependencies]
httpd-util = "0.1.1"
sysfs_gpio = "0.5.3"
mbus-api = "0.1.0"
chrono = { version = "0.4", features = ["serde"] }
futures = "0.1"
hyper = {version = "0.11"}
hyper-tls = {version = "0.1.2"}
swagger = "2"
error-chain = "0.12"
lazy_static = "0.2"
log = "0.3.0"
mime = "0.3.3"
multipart = {version = "0.13.3"}
native-tls = {version = "0.1.4"}
openssl = {version = "0.9.14"}
percent-encoding = {version = "1.0.0"}
regex = {version = "0.2"}
serde = "1.0"
serde_derive = "1.0"
serde_ignored = {version = "0.0.4"}
serde_json = {version = "1.0"}
serde_urlencoded = {version = "0.5.1"}
tokio-core = {version = "0.1.6"}
tokio-proto = {version = "0.1.1"}
tokio-tls = {version = "0.1.3", features = ["tokio-proto"]}
url = {version = "1.5"}
uuid = {version = "0.5", features = ["serde", "v4"]}
# ToDo: this should be updated to point at the official crate once
# https://github.com/RReverser/serde-xml-rs/pull/45 is accepted upstream
clap = "2.25"

[workspace]
members = [ "openapi_client" ]
