[package]
name = "mbus"
version = "0.2.0"
authors = ["Piers Finlayson <piers@packom.net>"]
edition = "2018"
license = "GPL-3.0-or-later"
repository = "https://github.com/packom/mbus-httpd"
documentation = "https://github.com/packom/mbus-httpd"
homepage = "https://github.com/packom/mbus-httpd"
description = "An HTTP microservice exposing M-Bus Functionality"
readme = "README.md"
keywords = ["mbus","m-bus","openapi","meter","http"]
categories = ["api-bindings","hardware-support","network-programming","embedded","web-programming"]

[badges]
maintenance = { status = "actively-developed" }
travis-ci = { repository = "packom/mbus-httpd", branch = "master" }

[dependencies]
httpd-util = "0.1"
sysfs_gpio = "0.5"
mbus-api = "0.2"
chrono = { version = "0.4", features = ["serde"] }
futures = "0.1" # 0.3 incompatible
hyper = {version = "0.12"} # 0.13 incompatible
swagger = "4.0"
lazy_static = "1.4"
log = "0.4"
mime = "0.3"
multipart = {version = "0.16"}
native-tls = {version = "0.2"}
percent-encoding = {version = "2"}
regex = {version = "1"}
serde = "1.0"
serde_derive = "1.0"
serde_ignored = {version = "0.1"}
serde_json = {version = "1.0", optional = true}
serde_urlencoded = {version = "0.6"}
tokio = "0.1.17" # 0.2 incompatible
tokio-openssl = "0.3" # No tokio_openssl::SslAcceptorExt in 0.4
url = {version = "2"}
uuid = {version = "0.8", features = ["serde", "v4"]}
error-chain = "0.12"
nix = "0.11.0" # i2cdev2 incompatible with nix 0.17
openssl = {version = "0.10"}
