[package]
name = "mbus"
version = "0.3.1"
authors = ["Piers Finlayson <piers@packom.net>"]
edition = "2018"
license = "GPL-3.0-or-later"
repository = "https://github.com/packom/mbus-httpd"
documentation = "https://github.com/packom/mbus-httpd"
homepage = "https://github.com/packom/mbus-httpd"
description = "An HTTP microservice exposing M-Bus Functionality"
readme = "README.md"
keywords = ["mbus","m-bus","openapi","meter","http"]
categories = ["api-bindings","hardware-support","network-programming","embedded","web-programming"]

[badges]
maintenance = { status = "actively-developed" }
travis-ci = { repository = "packom/mbus-httpd", branch = "master" }

[dependencies]
#serde-xml-rs = {git = "git://github.com/Metaswitch/serde-xml-rs.git" , branch = "master"}
serde-xml-rs = "0.4.0"
httpd-util = "0.1"
sysfs_gpio = "0.5"
mbus-api = "^0.3.1"
async-trait = "0.1.24"
chrono = { version = "0.4", features = ["serde"] }
futures = "0.3"
hyper = "0.13"
hyper-tls = "0.4"
swagger = "5.0.0-alpha-1"
lazy_static = "1.4"
log = "0.4"
mime = "0.3"
multipart = {version = "0.16"}
native-tls = {version = "0.2"}
percent-encoding = {version = "2"}
regex = {version = "1"}
serde = "1.0"
serde_derive = "1.0"
serde_ignored = {version = "0.1"}
serde_json = {version = "1.0", optional = true}
serde_urlencoded = {version = "0.6"}
tokio = { version = "0.2", features = ["rt-threaded", "macros", "stream"] }
tokio-openssl = "0.4"
url = {version = "2"}
uuid = {version = "0.8", features = ["serde", "v4"]}
error-chain = "0.12"
nix = "0.11.0" # i2cdev2 incompatible with nix 0.17
openssl = {version = "0.10"}
clap = "2.33"
tokio-core = "0.1.17"
